examples/test/testpolicy3452.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3452
  namespace: namespace132
spec:
  podSelector:
    matchLabels:
      key7: value22
      key14: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value3
          key6: value21
      podSelector:
        matchLabels:
          key30: value8
